fixing z-index for navigation on mobile devices

--- a/css/base.css
+++ b/css/base.css
@@ -287,11 +287,9 @@ input[type=checkbox] {
   flex-grow: 0; }
 
 .home-container {
-  position: relative;
   width: 950px;
-  margin: 0 auto 20px auto;
-  display: flex;
-  top: 60px; }
+  margin: 20px auto;
+  display: flex; }
 
 .home-container__col-1 {
   width: 710px;
